# BD-check

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  __main__.py  main.py  storage.py
app/core/: __init__.py  compare.py  report.py  result.py  scoring.py  settings.py
app/core/algos/: __init__.py  decomposition.py  fd.py  keys.py  normal_forms.py
app/core/checks/: __init__.py  common.py  task1.py  task10.py  task11.py  task12.py  task13.py  task2.py  task3.py  task4.py  task5.py  task6.py  task7.py  task8.py  task9.py
app/core/excel/: __init__.py  blocks.py  importer.py  table_detect.py
app/core/semantic/: __init__.py  build_graph.py  explain.py  query.py  rubric.py  triples.py
app/ui/: __init__.py  load_files_page.py  main_window.py  report_view.py
tests/: test_excel_smoke.py  test_fd.py  test_keys.py  test_nf.py  test_scoring.py  test_tasks_core.py
