[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "db-normalization-checker"
version = "0.1.0"
description = "Desktop app for automated checking of DB normalization assignments (up to 3NF)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "PySide6>=6.6",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pyinstaller>=6"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
