[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "db-normalization-checker"
version = "0.1.0"
description = "Desktop app for automated checking of DB normalization assignments (up to 3NF)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "PySide6>=6.6",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pyinstaller>=6",
    "black>=24",
    "ruff>=0.1",
    "isort>=5",
    "pre-commit>=3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '/(\.git|\.venv)/'

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["app"]
